force-app/main/default/objects/Product2/fields/Early_Access_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Early_Access_Minutes__c</fullName>
    <label>Early Access Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>