force-app/main/default/objects/Product2/fields/Launch_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date_Time__c</fullName>
    <label>Launch Date Time</label>
    <type>DateTime</type>
</CustomField>