force-app/main/default/objects/Product2/fields/Preferred__c.field-meta.xml
<CustomField>
    <fullName>Preferred__c</fullName>
    <label>Preferred Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kitchen Appliances</fullName>
            </value>
            <value>
                <fullName>Beauty Products</fullName>
            </value>
            <value>
                <fullName>Apparels</fullName>
            </value>
            <value>
                <fullName>Sports Shoes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>